修改部分注释问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,28 @@
 custom.param=utf-8
 
-# \u6D4B\u8BD5\u53F7\u7684 appID
-com.appId=wx7c1905b964559c57
-# \u6D4B\u8BD5\u53F7\u7684 appsecret
-com.secret=9b456b0dc71ff43513d0958030997860
+# A
+com.appId=
+# B
+com.secret=
 
-# \u6240\u5728\u57CE\u5E02
+# C
+com.user=
+
+# D
+com.templateId=
+
+# E
+com.chpKet=
+
+# F
 # http://www.ab173.com/convert/Unicode.php
-# \u70B9\u51FB\u201C\u4E2D\u6587\u8F6CUnicode\u201D
-com.city=\u4E95\u9649\u77FF\u533A
+com.city=\u5317\u4eac\u5e02
 
-# \u5BF9\u65B9\u5FAE\u4FE1id
-#com.user: oRbdB5wzB9TqZCtuE4egc3wm6JO8
-com.user=oRbdB5-imUETuL6ZWyTHvVKkB40g
-# \u6D88\u606F\u6A21\u677Fid
-com.templateId=pQAUcZAGidxwV5iY5ZSs5p-KDfgA06bhgIE_6TKgO8Y
+# G
+com.loveTime=2022-01-01
 
-# \u5F69\u8679\u5C41id
-com.chpKet=825b9086349c707d310c91fdfd2b6fc7
-
-# \u604B\u7231\u65E5\u671F
-com.loveTime=2022-07-31
-# \u5BF9\u65B9\u751F\u65E5\u662F\u5426\u662F\u9634\u5386\uFF08\u9634\u5386\u5199 true \u9633\u5386\u5199 false\uFF09
+# true false
 com.solarCalendar=true
-# \u5BF9\u65B9\u751F\u65E5
-com.birthday=1998-09-18
+# H
+com.birthday=1999-01-01
 
