修改README.md说明文档与properties配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,21 @@
 custom.param=utf-8
-
-# A
+# A \u5FAE\u4FE1\u516C\u4F17\u53F7 appID
 com.appId=
-# B
+# B \u5FAE\u4FE1\u516C\u4F17\u53F7 appsecret
 com.secret=
-
-# C
+# \u57CE\u5E02\u4EE3\u7801
+# \u76F4\u63A5\u5728 AreaNumberUtil.java \u91CC\u9762Ctrl+F\u627E\u81EA\u5DF1\u6240\u5728\u5730\u533A\u7684\u7F16\u7801\uFF0C\u5982\u679C\u6CA1\u6709\uFF0C\u81EA\u884C\u7F51\u4E0A\u767E\u5EA6
+com.city=101071201
+# C \u63A5\u6536\u8005\u5FAE\u4FE1\u516C\u4F17\u53F7
 com.user=
-
-# D
+# D \u5FAE\u4FE1\u516C\u4F17\u53F7\u6A21\u677Fid
 com.templateId=
-
-# E
+# E \u5F69\u8679\u5C41+\u5929\u6C14\u63A5\u53E3\u5BC6\u94A5
 com.chpKet=
-
-# F
-# http://www.ab173.com/convert/Unicode.php
-com.city=\u5317\u4eac\u5e02
-
-# G
+# \u604B\u7231\u5F00\u59CB\u65E5\u671F
 com.loveTime=2022-01-01
-
-# true false
+# \u5BF9\u65B9\u751F\u65E5\u662F\u5426\u4E3A\u9634\u5386\uFF1Atrue  \u9633\u5386\u4E3A\uFF1Afalse
 com.solarCalendar=true
-# H
-com.birthday=1999-01-01
+# \u5BF9\u65B9\u751F\u65E5\u65E5\u671F
+com.birthday=2022-01-01
 
