--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 custom.param=utf-8
-# A \u5FAE\u4FE1\u516C\u4F17\u53F7 appID
+# wx587b4ea5ac73aee2 
 com.appId=
-# B \u5FAE\u4FE1\u516C\u4F17\u53F7 appsecret
+a9bd74b432d19bf0c95c46414f7acb4e
 com.secret=
 # \u57CE\u5E02\u4EE3\u7801
 # \u76F4\u63A5\u5728 AreaNumberUtil.java \u91CC\u9762Ctrl+F\u627E\u81EA\u5DF1\u6240\u5728\u5730\u533A\u7684\u7F16\u7801\uFF0C\u5982\u679C\u6CA1\u6709\uFF0C\u81EA\u884C\u7F51\u4E0A\u767E\u5EA6
-com.city=101071201
-# C \u63A5\u6536\u8005\u5FAE\u4FE1\u516C\u4F17\u53F7
+com.city=320923000000
+oUWk06ZdiCDMYA3VpGbf4Hz7A5ME
 com.user=
-# D \u5FAE\u4FE1\u516C\u4F17\u53F7\u6A21\u677Fid
+	fFZN1nQGGoqSP7QFTEUF44p3QIhArvRD1OUrCDAcCWE
 com.templateId=
-# E \u5F69\u8679\u5C41+\u5929\u6C14\u63A5\u53E3\u5BC6\u94A5
+40c0a4bfa931acd40ec9d3423892baef
 com.chpKet=
 # \u604B\u7231\u5F00\u59CB\u65E5\u671F
-com.loveTime=2022-01-01
+com.loveTime=2023-05-20
 # \u5BF9\u65B9\u751F\u65E5\u662F\u5426\u4E3A\u9634\u5386\uFF1Atrue  \u9633\u5386\u4E3A\uFF1Afalse
-com.solarCalendar=true
+com.solarCalendar=false
 # \u5BF9\u65B9\u751F\u65E5\u65E5\u671F
-com.birthday=2022-01-01
+com.birthday=2001-12-03
 
